tests/snapshots/protocols__serialize__tests__illegal_fork_prot.snap
---
source: src/serialize.rs
expression: content
---
error: Fork command should have no arguments.
   ┌─ tests/illegal_fork.prot:12:3
   │
12 │   fork(1);
   │   ^^^^ Fork command should have no arguments.
